add part of konzeptvalidierung

--- a/appendix/messung/messung.tex
+++ b/appendix/messung/messung.tex
@@ -43,7 +43,11 @@
 			\subsubsection*{Auslenkung 1}
 				\image{appendix/messung/image/auslenkung_3}{scale=0.6}{htbp}[Auslenkung 3 langsam][img:auslenkung_2]
 		
-		   		
+		\subsection{Messung Drift}\label{ss:anhang_drift}
+		%
+		Messung des Driftes, dabei wurde die Bewegungsdetektion ausgeschaltet und das \gls{g:myrio} für \unit[10]{s} in Ruhe auf dem Tisch in der z-Achsen Position wie in Abschnitt \vref{s:verifikation_translation} beschrieben platziert.
+		%
+		\image{appendix/messung/image/Drift}{scale=0.6}{htbp}[Drift auf der x- und y-Achse während 10 s][img:drift]		
     	
     %
     \section{Implementation}\label{s:anhang_implementation_messung}
