--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -518,7 +518,7 @@ b_1 &= \frac{T_a}{2}
 		\input{content/3_konzept/table/messmittel}
 	%
 	%
-	\subsection{Methoden}
+	\subsection{Methoden}\label{ss:methode_tran}
 		%
 		\subsubsection*{Messgruppen}
 			Es werden zwei Messgruppen definiert. Die eine dient als Testgruppe und die andere als Kontrollgruppe. 
