--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -13,9 +13,10 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Validierung}\label{ch:validierung}\todo{Ergebnis des Projektes}
-\section{Ergebnisse}
-\section{Soll/Ist-Vergleich}\label{sec:sollist}\todo{Bezug auf den Zeitplan, Abweichungen erklären; Stand der Dinge}
-\section{Erkenntnisse, Verbesserungen}\todo{eingehen auf Literatur (Gyro, Magnetometer)}
+\section{Ergebnis der Arbeit}
+\section{Erkenntnisse}\todo{eingehen auf Literatur (Gyro, Magnetometer)}
 	\begin{itemize}
 		\item \gls{g:labview} nicht unter Windows 8.x verwenden. Die gesamte Toolchain verhält sich sehr instabil, ins besonders die USB-Treiber für das \gls{g:myrio}. 
 	\end{itemize}
+\section{Soll/Ist-Vergleich Zeitplan}\label{sec:sollist}\todo{Bezug auf den Zeitplan, Abweichungen erklären; Stand der Dinge}
+\section{Ausblick}
